--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,34 +1,26 @@
-name: Deploy Frontend to Azure
+name: Deploy to Azure
 
 on:
   push:
     branches:
-      - main  
-  workflow_dispatch:
+      - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
+    - name: Checkout Repo
       uses: actions/checkout@v2
-
+    
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14' 
+        node-version: '14' # Wybierz wersję Node.js, która może być używana do testów lub buildów
 
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build
-      run: npm run build 
-
-    - name: Deploy to Azure Web App
+    - name: Build and deploy
       uses: azure/webapps-deploy@v2
       with:
-        app-name: budgetappfront 
-        slot-name: 'production' 
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }} 
-        package: '.' 
+        app-name: 'budgetappfront'
+        slot-name: 'production' # Opcjonalnie, jeśli używasz slotów
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: .
