--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests yet\""
   },
   "repository": {
     "type": "git",
@@ -17,3 +17,4 @@
   "homepage": "https://github.com/AmereQ/budget-app-front#readme",
   "description": ""
 }
+s
